# nekro-plugin-yt-dlp

./: .gitignore  GEMINI.md  README.md  __init__.py  pyproject.toml  requirements.txt  todo.md
docs/: yt_dlp_help.md
nekro_plugin_yt_dlp/: __init__.py
nekro_plugin_yt_dlp/core/: functions.py
nekro_yt_dlp/: __init__.py  config.py  plugin.py  utils.py
tests/: test_functions.py
