[project]
name = "nekro-plugin-yt-dlp"
version = "0.1.0"
description = "一个基于 yt-dlp 的 NekroAgent 插件，用于搜索和下载音视频。"
authors = [{ name = "Gemini", email = "gemini@google.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "nekro-agent>=2.0.0",
    "yt-dlp>=2025.10.14",
]

[project.urls]
Repository = "https://github.com/greenhandzdl/nekro-plugin-yt-dlp"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.files]
include = [
    "__init__.py",
    "nekro_yt_dlp/**/*.py",
]


[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
